--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.7",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-contenteditable": "^2.1.0",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "react-table": "^6.8.5"
