--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
-    "react-contenteditable": "^2.1.0",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "react-table": "^6.8.5"
